--- a/sensors/mqtt.yaml
+++ b/sensors/mqtt.yaml
@@ -1,16 +1,21 @@
-- platform: mqtt
-  name: Start Timestamp
-  unique_id: 120a114d-a8a1-4364-8d43-a35954b19239
-  icon: mdi:timer-outline
-  state_topic: homeassistant/start
+# - platform: mqtt
+#   name: Start Timestamp
+#   unique_id: 120a114d-a8a1-4364-8d43-a35954b19239
+#   icon: mdi:timer-outline
+#   state_topic: homeassistant/start
 
-# Sensor for Home Assistant shutdown timestamp.
-- platform: mqtt
-  name: Shutdown Timestamp
-  unique_id: affce05d-153b-48f2-af61-1333e50c2163
-  icon: mdi:timer-outline
-  state_topic: homeassistant/shutdown
+# # Sensor for Home Assistant shutdown timestamp.
+# - platform: mqtt
+#   name: Shutdown Timestamp
+#   unique_id: affce05d-153b-48f2-af61-1333e50c2163
+#   icon: mdi:timer-outline
+#   state_topic: homeassistant/shutdown
 
+# - platform: mqtt
+#   name: Dad Work Daily
+#   unique_id: 9677c6da-70cf-463e-bed7-cfc63152d4ea
+#   icon: mdi:factory
+#   state_topic: work/daily_hours
 
 #- platform: mqtt
 #   name: "rfid_reading"
