shorten friendly names

--- a/sensors/entities_count.yaml
+++ b/sensors/entities_count.yaml
@@ -1,38 +1,38 @@
 - platform: template
   sensors:
     sensor_count:
-      friendly_name: 'Sensors Count'
+      friendly_name: 'Sensors'
       value_template: '{{ states.sensor | count }}'
     automation_count:
-      friendly_name: 'Automations Count'
+      friendly_name: 'Automations'
       value_template: '{{ states.automation | count }}'
     script_count:
-      friendly_name: 'Scripts Count'
+      friendly_name: 'Scripts'
       value_template: '{{ states.script | count }}'
     switch_count:
-      friendly_name: 'Switches Count'
+      friendly_name: 'Switches'
       value_template: '{{ states.switch | count }}'
     binary_sensor_count:
-      friendly_name: 'Binary Sensors Count'
+      friendly_name: 'Binary Sensors'
       value_template: '{{ states.binary_sensor | count }}'
     lights_count:
-      friendly_name: 'Lights Count'
+      friendly_name: 'Lights'
       value_template: '{{ states.light | count }}'
     tracker_count:
-      friendly_name: 'Devices Count'
+      friendly_name: 'Devices'
       value_template: '{{ states.device_tracker | count }}'
     camera_count:
-      friendly_name: 'Cameras Count'
+      friendly_name: 'Cameras'
       value_template: '{{ states.camera | count }}'
     group_count:
-      friendly_name: 'Groups Count'
+      friendly_name: 'Groups'
       value_template: '{{ states.group | count }}'
     inputs_count:
-      friendly_name: 'Inputs Count'
+      friendly_name: 'Inputs'
       value_template: "{{ states | map(attribute='entity_id') | map('regex_search','^input') | select('true') | list | count}}"
     entities_count:
-      friendly_name: 'Entities Count'
+      friendly_name: 'Entities'
       value_template: "{{ states | map(attribute='entity_id') | list | count}}"
     media_player_count:
-      friendly_name: 'Players Count'
+      friendly_name: 'Players'
       value_template: '{{ states.media_player | count }}'
