--- a/switches.yaml
+++ b/switches.yaml
@@ -31,47 +31,50 @@
     #   value_template: '{{ value == "01000000" or value == "11000000" }}'
     #   friendly_name: Προβολέας Αλογόνου
     pdf2file_makis:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2file_makis.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2file_makis.sh'"
       friendly_name: PDF σε αρχείο
     pdf2file_pavlina:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2file_pavlina.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2file_pavlina.sh'"
       friendly_name: PDF σε αρχείο
     pdf2file_thanasis: 
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2file_thanasis.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2file_thanasis.sh'"
       friendly_name: PDF σε αρχείο
     pdf2mail_makis:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2mail_makis.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2mail_makis.sh'"
       friendly_name: PDF στο email
     pdf2mail_pavlina:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2mail_pavlina.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2mail_pavlina.sh'"
       friendly_name: PDF στο email
     pdf2mail_thanasis:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2mail_thanasis.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2mail_thanasis.sh'"
       friendly_name: PDF στο email
     pdf2print_makis:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2print_makis.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2print_makis.sh'"
       friendly_name: PDF εκτύπωση
     pdf2print_pavlina:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2print_pavlina.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2print_pavlina.sh'"
       friendly_name: PDF εκτύπωση
     pdf2print_thanasis:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2print_thanasis.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/PDF2print_thanasis.sh'"
       friendly_name: pdf εκτύπωση
     jpeg2mail_makis:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2mail_makis.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2mail_makis.sh'"
       friendly_name: Φωτογραφία στο email
     jpeg2mail_pavlina:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2mail_pavlina.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2mail_pavlina.sh'"
       friendly_name: Φωτογραφία στο email
     jpeg2mail_thanasis:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2mail_thanasis.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2mail_thanasis.sh'"
       friendly_name: Φωτογραφία στο email
     jpeg2file_makis:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2file_makis.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2file_makis.sh'"
       friendly_name:  Φωτογραφία σε αρχείο
     jpeg2file_pavlina:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2file_pavlina.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2file_pavlina.sh'"
       friendly_name:  Φωτογραφία σε αρχείο
     jpeg2file_thanasis:
-      command_on: "ssh -i /ssl/rpi_key -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2file_thanasis.sh'"
+      command_on: "ssh -i /ssl/rp3-media-server -o StrictHostKeyChecking=no pi@192.168.1.249 'bash /home/pi/scanner_scripts/JPEG2file_thanasis.sh'"
       friendly_name:  Φωτογραφία σε αρχείο
+
+- platform: switchbot
+  mac: "EF:30:26:47:68:ED"
