update to work with Core 2021.11

--- a/packages/Garden Irrigation/irrigation_remote_control.yaml
+++ b/packages/Garden Irrigation/irrigation_remote_control.yaml
@@ -114,7 +114,7 @@ automation:
         entity_id: input_boolean.irrigation_remote_control
 
     action:
-      - service_template: >
+      - service: >
           automation.turn_{{ states('input_boolean.irrigation_remote_control') }}
         data_template:
           entity_id: >
