--- a/media_player.yaml
+++ b/media_player.yaml
@@ -1,6 +1,6 @@
-- platform: androidtv
-  name: Android TV
-  host: 192.168.1.5
+# - platform: androidtv
+#   name: Android TV
+#   host: 192.168.1.10
 - platform: universal
   device_class: receiver
   name: NAD
